--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 	<div class="gradient">
 		<h1>
 			<p class="fold-open">Ask!</p>
+			<p class="smaller">Ask and answer, straight from Discord</p>
 			<div class="invite w3-animate-bottom">
-				<a href="https://discord.com" target="_blank" rel="noopener noreferrer" class="invite smaller"><i class="fa-brands fa-discord"></i>Add to Discord</a>
+				<a href="https://discord.com" target="_blank" rel="noopener noreferrer" class="smaller"><i class="fa-brands fa-discord"></i>Add to Discord</a>
 			</div>
 		</h1>
 	</div>
-	<h1>I should be outside</h1>
+	<div class="main">
+		<h1 style="margin-top: 0 !important">Ask a question.</h1>
+	</div>
 </body>
