--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div class="gradient">
 		<h1>
 			<p class="fold-open">Ask!</p>
-			<p class="smaller">Ask and answer, straight from Discord</p>
+			<p class="smaller scale-up-center">Ask and answer, straight from Discord</p>
 			<div class="invite w3-animate-bottom">
 				<a href="https://discord.com" target="_blank" rel="noopener noreferrer" class="smaller"><i class="fa-brands fa-discord"></i>Add to Discord</a>
 			</div>
