--- a/index.html
+++ b/index.html
@@ -26,16 +26,56 @@
 			<!-- <h2 style="position: relative;">Sub-text</h2>
 		</div>
 	</div> -->
+<body onload="load()">
 	<div class="gradient">
 		<h1>
 			<p class="fold-open">Ask!</p>
 			<p class="smaller scale-up-center">Ask and answer, straight from Discord</p>
-			<div class="invite w3-animate-bottom">
-				<a href="https://discord.com" target="_blank" rel="noopener noreferrer" class="smaller"><i class="fa-brands fa-discord"></i>Add to Discord</a>
+			<div class="invite-wrapper">
+				<div class="invite w3-animate-bottom">
+					<a href="https://discord.com" target="_blank" rel="noopener noreferrer" class="smaller" style="color: white !important"><i class="fa-brands fa-discord"></i>Add to Discord</a>
+				</div>
 			</div>
 		</h1>
 	</div>
 	<div class="main">
-		<h1 style="margin-top: 0 !important">Ask a question.</h1>
+		<div class="left">
+			<img src="/Images/Ask! Demo Image 1.png" alt="An image of Discord with a question" width="550px" height="250px">
+			<h1>Ask it, answer it.</h1>
+			<p>
+				Ask! is a Discord bot that allows you to ask a question from everywhere, as long as the Ask! bot is there. You can receive your answers
+				in the <a href="https://discord.gg/m25Zd4ZA6s" target="_blank" rel="noopener noreferrer" class="blurple-text">Ask! Discord server</a> and in your DMs (when you have them enabled.)
+				<br>
+				Asking a question is as easy as typing <code>/ask &lt;question&gt;</code>, and replace <code>&lt;question&gt;</code> with the question you want to ask. Your question will be send to the <a href="https://discord.gg/m25Zd4ZA6s" target="_blank" rel="noopener noreferrer" class="blurple-text">Ask! Discord
+				server</a> and it can be seen in the <a href="https://discord.gg/jN7yAH5yJB" target="_blank" rel="noopener noreferrer" class="blurple-text">#｢⁉｣ask-and-answer-questions</a> channel!
+			</p>
+		</div>
+
+		<div class="right">
+			<img src="/Images/Ask! Demo Image 2.png" alt="An image of Discord with an answer" width="550px" height="250px">
+			<h1>Answers delivered to you</h1>
+			<p>
+				When a quetion that you asked is answered, Ask! tries to send it to your DMs, however, when this fails, Ask! pings you when the question gets answered in the <a href="https://discord.gg/m25Zd4ZA6s" target="_blank" rel="noopener noreferrer" class="blurple-text">Ask! Discord
+					server</a>
+				<br>
+				As you can see, Ask! also has various moderation features so that everyone can enjoy Ask!, with features such as deleting questions and answers and being able to report them. All questions are also stored, this includes their edit history and their answers.
+				<br>
+				<i><b>Note:</b> Answers do not get deleted in your DMs.</i>
+			</p>
+		</div>
 	</div>
+
+	<script>
+		function load() {
+			if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+				// Mobile device
+				console.log("It appears that you're on a mobile device! This means that you get the website optimised for those small devices!")
+				document.body.classList.add("mobile")
+			} else {
+				// Not mobile
+				console.log("It appears that you're not on a mobile device! (laptop, computer, etc.) This means that you get the normal website!")
+				document.body.classList.remove("mobile")
+			}
+		}
+	</script>
 </body>
