--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<p class="fold-open">Ask!</p>
 			<p class="smaller scale-up-center">Ask and answer, straight from Discord</p>
 			<div class="invite-wrapper">
-				<div class="invite w3-animate-bottom">
+				<div class="invite w3-animate-bottom" onclick="location.href='invite.html'">
 					<a href="https://discord.com" target="_blank" rel="noopener noreferrer" class="smaller" style="color: white !important"><i class="fa-brands fa-discord"></i>Add to Discord</a>
 				</div>
 			</div>
