--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
 			<p class="fold-open">Ask!</p>
 			<p class="smaller scale-up-center">Ask and answer, straight from Discord</p>
 			<div class="invite-wrapper">
-				<div class="invite w3-animate-bottom" onclick="location.href='invite.html'">
-					<a href="https://discord.com" target="_blank" rel="noopener noreferrer" class="smaller" style="color: white !important"><i class="fa-brands fa-discord"></i>Add to Discord</a>
+				<div class="invite w3-animate-bottom" onclick="newTab('invite.html')">
+						<!-- <a href="invite.html" target="_blank" rel="noopener noreferrer" class="smaller invite-main shine" style="color: white !important"><i class="fa-brands fa-discord"></i>Add to Discord</a> -->
+						<a href="invite.html" target="_blank" rel="noopener noreferrer" class="smaller invite-main shine" style="color: white !important">
+							<i class="fa-brands fa-discord"></i>
+							Add to Discord
+						</a>
 				</div>
 			</div>
 		</h1>
@@ -76,6 +80,10 @@
 				console.log("It appears that you're not on a mobile device! (laptop, computer, etc.) This means that you get the normal website!")
 				document.body.classList.remove("mobile")
 			}
+		}
+
+		function newTab(url) {
+			window.open(url, "_blank").focus();
 		}
 	</script>
 </body>
