--- a/question.html
+++ b/question.html
@@ -56,7 +56,7 @@
 		}
 		
 		function loadText(id) {
-			dict = JSON.parse(loadXMLDoc("https://cdn.dantenl.tk/Ask%21/data.json"))
+			dict = JSON.parse(loadXMLDoc("https://ask.luckunstoppable7.com/data.json"))
 			if (!id) {
 				id = document.getElementById("id").value
 			}
@@ -168,7 +168,9 @@
 
 			const queryString = new URLSearchParams(window.location.search);
 			const url_id = queryString.get("id");
-			loadText(url_id)
+			if (url_id) {
+				loadText(url_id)
+			}
 		}
 
 	</script>
