Update invite link
The invite link used to be made by the Ask! Beta bot, now it's by the regular bot.

--- a/discord.html
+++ b/discord.html
@@ -21,7 +21,7 @@
 				<div class="cube2"></div>
 			</div>
 			<h1 style="color: white; text-align: center;">Redirecting you!</h1>
-			<h2 style="color: white; text-align: center;">Not redirected after 3 seconds? Click <a href="https://discord.gg/m25Zd4ZA6s" class="blurple-text">here</a></h2>	
+			<h2 style="color: white; text-align: center;">Not redirected after 3 seconds? Click <a href="https://discord.gg/YNPcH27Wfj" class="blurple-text">here</a></h2>	
 
 		<script>
 			function load() {
