🔗: Updated invite URLs

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 			<h1>Ask it, answer it.</h1>
 			<p>
 				Ask! is a Discord bot that allows you to ask a question from everywhere, as long as the Ask! bot is there. You can receive your answers
-				in the <a href="https://discord.gg/m25Zd4ZA6s" target="_blank" rel="noopener noreferrer" class="blurple-text">Ask! Discord server</a> and in your DMs (when you have them enabled.)
+				in the <a href="invite.html" target="_blank" rel="noopener noreferrer" class="blurple-text">Ask! Discord server</a> and in your DMs (when you have them enabled.)
 				<br>
-				Asking a question is as easy as typing <code>/ask &lt;question&gt;</code>, and replace <code>&lt;question&gt;</code> with the question you want to ask. Your question will be send to the <a href="https://discord.gg/m25Zd4ZA6s" target="_blank" rel="noopener noreferrer" class="blurple-text">Ask! Discord
-				server</a> and it can be seen in the <a href="https://discord.gg/jN7yAH5yJB" target="_blank" rel="noopener noreferrer" class="blurple-text">#｢⁉｣ask-and-answer-questions</a> channel!
+				Asking a question is as easy as typing <code>/ask &lt;question&gt;</code>, and replace <code>&lt;question&gt;</code> with the question you want to ask. Your question will be send to the <a href="invite.html" target="_blank" rel="noopener noreferrer" class="blurple-text">Ask! Discord
+				server</a> and it can be seen in the <a href="https://discord.gg/YVbKwxJRAC" target="_blank" rel="noopener noreferrer" class="blurple-text">#｢⁉｣ask-and-answer-questions</a> channel!
 			</p>
 		</div>
 
