--- a/question.html
+++ b/question.html
@@ -17,7 +17,7 @@
 		<h1 class="big gradient-text">Ask! Question Viewer</h1>
 		<h2>Here you can view the question and its answers all in one ordened place. You can directly open this from Discord or enter any Ask! ID.</h2>
 		<form action="javascript:loadText()">
-			<label for="id">ID:</label><br>
+			<label for="id">ID:</label>
 			<input type="text" id="id" name="id" placeholder="example">
 			<button>
 				<i class="fa-solid fa-circle-arrow-right"></i>
