--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<meta property="og:image" content="https://ask-bot.gq/i/AskLogo200x200.png" />
 	<meta property="og:description"
 		content="Ask! is a Discord bot that allows you to ask questions from any server (or DMs) and can be answered via the Discord server!" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/Ask! Favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/Ask! Favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/Ask! Favicon/favicon-16x16.png">
+	<link rel="manifest" href="/Ask! Favicon/site.webmanifest">
 	<meta name="theme-color" content="#ED47FF">
 	<link rel="stylesheet" href="style.css" />
 	<meta charset="utf-8" />
