--- a/question.html
+++ b/question.html
@@ -5,8 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Ask! Question Viewer" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://ask-bot.gq/i/AskLogo200x200.png" />
+	<meta property="og:image" content="https://ask-bot.gq/Images/AskLogo200x200.png" />
 	<meta property="og:description" content="You can preview this question and its answers when you click on this link!" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/Ask! Favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/Ask! Favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/Ask! Favicon/favicon-16x16.png">
+	<link rel="manifest" href="/Ask! Favicon/site.webmanifest">
 	<meta name="theme-color" content="#ED47FF">
 	<link rel="stylesheet" href="style.css" />
 	<meta charset="utf-8" />
