--- a/thanks.html
+++ b/thanks.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<title>Thanks for inviting! — Ask!</title>
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:title" content="Privacy policy — Ask!" />
+	<meta property="og:type" content="website" />
+	<meta property="og:image" content="Images/AskLogo200x200.png" />
+	<meta property="og:description" content="Learn what data Ask! stores. Using the Ask! bot means you automatically agree to this." />
+	<link rel="apple-touch-icon" sizes="180x180" href="/Ask! Favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/Ask! Favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/Ask! Favicon/favicon-16x16.png">
+	<link rel="manifest" href="/Ask! Favicon/site.webmanifest">
+	<meta name="theme-color" content="#ED47FF">
 	<link rel="stylesheet" href="style.css" />
 	<script src="https://kit.fontawesome.com/ee422b4c3c.js" crossorigin="anonymous"></script>
-	<title>Thanks for inviting — Ask!</title>
 </head>
 <body>
 	<div class="gradient fs">
