--- a/discord.html
+++ b/discord.html
@@ -14,7 +14,7 @@
 	<meta name="theme-color" content="#ED47FF">
 	<link rel="stylesheet" href="style.css" />
 	<script src="https://kit.fontawesome.com/ee422b4c3c.js" crossorigin="anonymous"></script>
-	<meta http-equiv="refresh" content="3; URL=https://discord.gg/m25Zd4ZA6s" />
+	<meta http-equiv="refresh" content="3; URL=https://discord.gg/YNPcH27Wfj" />
 	<title>Invite Ask!</title>
 </head>
 <body>
