--- a/discord.html
+++ b/discord.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Google Tag Manager -->
+	<script>(function (w, d, s, l, i) {
+			w[l] = w[l] || []; w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			}); var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-PC4F7PT');</script>
+	<!-- End Google Tag Manager -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Ask! Discord server" />
@@ -15,10 +25,13 @@
 	<link rel="stylesheet" href="style.css" />
 	<script src="https://kit.fontawesome.com/ee422b4c3c.js" crossorigin="anonymous"></script>
 	<meta http-equiv="refresh" content="3; URL=https://discord.gg/YNPcH27Wfj" />
-	<title>Invite Ask!</title>
+	<title>Join the Ask! server</title>
 </head>
-<body>
 	<body onload="load()">
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PC4F7PT" height="0" width="0"
+				style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
 		<!-- <div class="main" style="text-align: center;"> -->
 			<div class="spinner">
 				<div class="cube1"></div>
@@ -41,5 +54,4 @@
 			}
 		</script>
 	</body>
-</body>
 </html>
