--- a/beta/pay.html
+++ b/beta/pay.html
@@ -11,9 +11,18 @@
 	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 		<input type="hidden" name="cmd" value="_s-xclick">
 		<input type="hidden" name="hosted_button_id" value="L2NRX22SGL65N">
-		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit"
+		<table>
+			<tr>
+				<td><input type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (ask-bot.gq/id):</td>
+			</tr>
+			<tr>
+				<td><input type="text" name="os0" maxlength="200"></td>
+			</tr>
+		</table>
+		<input type="image" src="https://ask-bot.gq/images/Supercharge%20Price.png" border="0" name="submit"
 			alt="PayPal - The safer, easier way to pay online!">
 		<img alt="" border="0" src="https://www.paypalobjects.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
 	</form>
+
 </body>
 </html>
