--- a/Supercharges/fail.html
+++ b/Supercharges/fail.html
@@ -21,7 +21,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/Ask! Favicon/favicon-16x16.png">
 	<link rel="manifest" href="/Ask! Favicon/site.webmanifest">
 	<meta name="theme-color" content="#ED47FF">
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="/style.css" />
 	<meta charset="utf-8" />
 	<script src="https://kit.fontawesome.com/ee422b4c3c.js" crossorigin="anonymous"></script>
 </head>
