--- a/Supercharges/index.html
+++ b/Supercharges/index.html
@@ -1,3 +1,5 @@
+<!-- TODO: Make the error, and thanks pages. Also add a screenshot -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,7 +25,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/Ask! Favicon/favicon-16x16.png">
 	<link rel="manifest" href="/Ask! Favicon/site.webmanifest">
 	<meta name="theme-color" content="#ED47FF">
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="/style.css" />
 	<meta charset="utf-8" />
 	<script src="https://kit.fontawesome.com/ee422b4c3c.js" crossorigin="anonymous"></script>
 	<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
