❗️: Fixed an important bug

--- a/Supercharges/index.html
+++ b/Supercharges/index.html
@@ -79,8 +79,16 @@
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_s-xclick">
 					<input type="hidden" name="hosted_button_id" value="L2NRX22SGL65N">
-					<label for="os0" type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (<a href="https://ask-bot.gq/id" target="_blank" rel="noopener noreferrer">more info</a>):</label>
-					<input type="text" name="os0" maxlength="200" required>
+					<!-- <label for="os0" type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (<a href="https://ask-bot.gq/id" target="_blank" rel="noopener noreferrer">more info</a>):</label> -->
+					<!-- <input type="text" name="os0" maxlength="200" required> -->
+					<table>
+						<tr>
+							<td><input type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (ask-bot.gq/id):</td>
+						</tr>
+						<tr>
+							<td><input type="text" name="os0" maxlength="200" required></td>
+						</tr>
+					</table>
 					<button type="submit" class="buy" name="submit">
 						<i class='fa-brands fa-paypal'></i>
 						&euro;3,49
@@ -93,9 +101,17 @@
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_s-xclick">
 					<input type="hidden" name="hosted_button_id" value="9L84A44C8UXVW">
-					<label for="os0" type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (<a
+					<!-- <label for="os0" type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (<a
 							href="https://ask-bot.gq/id" target="_blank" rel="noopener noreferrer">more info</a>):</label>
-					<input type="text" name="os0" maxlength="200" required>
+					<input type="text" name="os0" maxlength="200" required> -->
+					<table>
+						<tr>
+							<td><input type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (ask-bot.gq/id):</td>
+						</tr>
+						<tr>
+							<td><input type="text" name="os0" maxlength="200" required></td>
+						</tr>
+					</table>
 					<button type="submit" class="buy" name="submit">
 						<i class='fa-brands fa-paypal'></i>
 						&euro;6,99
@@ -108,9 +124,17 @@
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_s-xclick">
 					<input type="hidden" name="hosted_button_id" value="9ME4MD4XFA3ES">
-					<label for="os0" type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (<a
-							href="https://ask-bot.gq/id" target="_blank" rel="noopener noreferrer">more info</a>):</label>
-					<input type="text" name="os0" maxlength="200" required>
+					<!-- <label for="os0" type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (<a
+							href="https://ask-bot.gq/id" target="_blank" rel="noopener noreferrer">more info</a>):</label> -->
+					<!-- <input type="text" name="os0" maxlength="200" required> -->
+					<table>
+						<tr>
+							<td><input type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (ask-bot.gq/id):</td>
+						</tr>
+						<tr>
+							<td><input type="text" name="os0" maxlength="200" required></td>
+						</tr>
+					</table>
 					<button type="submit" class="buy" name="submit">
 						<i class='fa-brands fa-paypal'></i>
 						&euro;10,49
