--- a/invite.html
+++ b/invite.html
@@ -1,5 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Ask!</title>
 	<!-- Google Tag Manager -->
 	<script>(function (w, d, s, l, i) {
 			w[l] = w[l] || []; w[l].push({
@@ -10,206 +11,47 @@
 					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
 		})(window, document, 'script', 'dataLayer', 'GTM-PC4F7PT');</script>
 	<!-- End Google Tag Manager -->
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Ask!" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://ask-bot.gq/i/AskLogo200x200.png" />
-	<meta property="og:description"
-		content="Ask! is a Discord bot that allows you to ask questions from any server (or DMs) and can be answered via the Discord server!" />
+	<meta property="og:image" content="Images/AskLogo200x200.png" />
+	<meta property="og:description" content="Invite the Ask! Discord bot to your server by clicking on this link!" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/Ask! Favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/Ask! Favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/Ask! Favicon/favicon-16x16.png">
 	<link rel="manifest" href="/Ask! Favicon/site.webmanifest">
 	<meta name="theme-color" content="#ED47FF">
 	<link rel="stylesheet" href="style.css" />
-	<meta charset="utf-8" />
 	<script src="https://kit.fontawesome.com/ee422b4c3c.js" crossorigin="anonymous"></script>
+	<meta http-equiv="refresh" content="3; URL=https://discord.com/oauth2/authorize?client_id=969293937091149874&scope=bot%20applications.commands&permissions=2147764224&response_type=code&redirect_uri=https%3A%2F%2Fask-bot.gq%2Fthanks" />
+	<title>Invite Ask!</title>
 </head>
+	<body onload="load()">
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PC4F7PT" height="0" width="0"
+				style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+		<!-- <div class="main" style="text-align: center;"> -->
+			<div class="spinner">
+				<div class="cube1"></div>
+				<div class="cube2"></div>
+			</div>
+			<h1 style="color: white; text-align: center;">Redirecting you!</h1>
+			<h2 style="color: white; text-align: center;">Not redirected after 3 seconds? Click <a href="https://discord.com/oauth2/authorize?client_id=969293937091149874&scope=bot%20applications.commands&permissions=2147764224&response_type=code&redirect_uri=https%3A%2F%2Fask-bot.gq%2Fthanks" class="blurple-text">here</a></h2>	
 
-<body onload="load()">
-	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PC4F7PT" height="0" width="0"
-			style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
-	<div class="gradient">
-		<h1>
-			<p class="fold-open">Ask!</p>
-			<p class="smaller scale-up-center">Ask and answer, straight from Discord</p>
-			<div class="invite-wrapper">
-				<div id="invite_button" class="invite w3-animate-bottom" onclick="invite()">
-						<!-- <a href="invite.html" target="_blank" rel="noopener noreferrer" class="smaller invite-main shine" style="color: white !important"><i class="fa-brands fa-discord"></i>Add to Discord</a> -->
-						<a class="smaller invite-main shine" style="color: white !important">
-							<i class="fa-brands fa-discord"></i>
-							Add to Discord
-						</a>
-				</div>
-			</div>
-		</h1>
-	</div>
-	<div class="main">
-		<h1 style="text-align: center;">Recent questions</h1>
-		<div class="recent-questions">
-			<div class="item">
-				<h1 id="itemOne">No question!</h1>
-			</div>
-			<div class="item">
-				<h1 id="itemTwo">No question!</h1>
-			</div>
-			<div class="item">
-				<h1 id="itemThree">No question!</h1>
-			</div>
-			<div class="item">
-				<h1 id="itemFour">No question!</h1>
-			</div>
-		</div>
-		<hr>
-		<div class="left">
-			<img src="/Images/Ask! Demo Image 1.png" alt="An image of Discord with a question" width="550px" height="250px">
-			<h1>Ask it, answer it.</h1>
-			<p>
-				Ask! is a Discord bot that allows you to ask a question from everywhere, as long as the Ask! bot is there. You can receive your answers
-				in the <a href="invite.html" target="_blank" rel="noopener noreferrer" class="blurple-text">Ask! Discord server</a> and in your DMs (when you have them enabled.)
-				<br>
-				Asking a question is as easy as typing <code>/ask &lt;question&gt;</code>, and replace <code>&lt;question&gt;</code> with the question you want to ask. Your question will be send to the <a href="invite.html" target="_blank" rel="noopener noreferrer" class="blurple-text">Ask! Discord
-				server</a> and it can be seen in the <a href="https://discord.gg/YVbKwxJRAC" target="_blank" rel="noopener noreferrer" class="blurple-text">#｢⁉｣ask-and-answer-questions</a> channel!
-			</p>
-		</div>
-
-		<div class="right">
-			<img src="/Images/Ask! Demo Image 2.png" alt="An image of Discord with an answer" width="550px" height="250px">
-			<h1>Answers delivered to you</h1>
-			<p>
-				When a quetion that you asked is answered, Ask! tries to send it to your DMs, however, when this fails, Ask! pings you when the question gets answered in the <a href="https://discord.gg/m25Zd4ZA6s" target="_blank" rel="noopener noreferrer" class="blurple-text">Ask! Discord
-					server</a>
-				<br>
-				As you can see, Ask! also has various moderation features so that everyone can enjoy Ask!, with features such as deleting questions and answers and being able to report them. All questions are also stored, this includes their edit history and their answers.
-				<br>
-				<i><b>Note:</b> Answers do not get deleted in your DMs.</i>
-			</p>
-		</div>
-	</div>
-
-	<footer>
-		<div class="footer-grid">
-			<div class="footer-1">
-				<h3>Question related</h3>
-
-				<a href="https://ask-bot.gq/browser" target="_blank" rel="noopener noreferrer">Ask! Question Browser</a><br>
-				<a href="https://ask-bot.gq/question" target="_blank" rel="noopener noreferrer">Ask! Question Viewer</a><br>
-				<a href="https://ask-bot.gq/user" target="_blank" rel="noopener noreferrer">Ask! User Viewer</a>
-			</div>
-			<div class="footer-2">
-				<h3>Other useful links</h3>
-
-				<a href="https://ask-bot.gq/supercharges/" target="_blank" rel="noopener noreferrer" class="supercharge-gradient-link">Ask! Supercharges</a><br>
-				<a href="https://ask-bot.gq/pricacy" target="_blank" rel="noopener noreferrer">Ask! Privacy Policy</a><br>
-				<a href="https://ask-bot.gq/discord" target="_blank" rel="noopener noreferrer">Ask! Discord Server</a>
-			</div>
-			<div class="footer-3">
-				<h3>Contact</h3>
-				<p>If you want to contact the Ask! team, feel free to join the Discord server or to send a direct message to <code>dante_nl#1234</code>, the creator of Ask!</p>
-			</div>
-		</div>
-	</footer>
-	<script>
-		function load() {
-			if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-				// Mobile device
-				console.log("It appears that you're on a mobile device! This means that you get the website optimised for those small devices!")
-				document.body.classList.add("mobile")
-				mobile = true
-			} else {
-				// Not mobile
-				console.log("It appears that you're not on a mobile device! (laptop, computer, etc.) This means that you get the normal website!")
-				document.body.classList.remove("mobile")
-				mobile = false
-			}
-
-			const request = JSON.parse(loadXMLDoc("https://ask.luckunstoppable7.com/data.json"))
-			iterationCountOne = 1
-			for (item in request["data"]) {
-				if (request["data"][item]["deleted"] == "true") {
-					delete request["data"][item]
+		<script>
+			function load() {
+				if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+					// Mobile device
+					console.log("It appears that you're on a mobile device! This means that you get the website optimised for those small devices!")
+					document.body.classList.add("mobile")
+				} else {
+					// Not mobile
+					console.log("It appears that you're not on a mobile device! (laptop, computer, etc.) This means that you get the normal website!")
+					document.body.classList.remove("mobile")
 				}
 			}
-			var keys = Object.keys(request["data"])
-
-			var lastOne = keys[keys.length - 1]
-			var lastTwo = keys[keys.length - 2]
-			var lastThree = keys[keys.length - 3]
-			var lastFour = keys[keys.length - 4]
-			console.log(lastThree)
-			if (mobile == true) {
-				truncateSize = 15
-			} else {
-				truncateSize = 30
-			}
-			itemOneQuestionTruncated = truncateString(request["data"][lastOne]["question"], truncateSize)
-			itemTwoQuestionTruncated = truncateString(request["data"][lastTwo]["question"], truncateSize)
-			itemThreeQuestionTruncated = truncateString(request["data"][lastThree]["question"], truncateSize)
-			itemFourQuestionTruncated = truncateString(request["data"][lastFour]["question"], truncateSize)
-
-			document.getElementById("itemOne").innerHTML = `<a href="question.html?id=${lastOne}">${itemOneQuestionTruncated}</a>`
-			document.getElementById("itemTwo").innerHTML = `<a href="question.html?id=${lastTwo}">${itemTwoQuestionTruncated}</a>`
-			document.getElementById("itemThree").innerHTML = `<a href="question.html?id=${lastThree}">${itemThreeQuestionTruncated}</a>`
-			document.getElementById("itemFour").innerHTML = `<a href="question.html?id=${lastFour}">${itemFourQuestionTruncated}</a>`
-			console.log(lastTwo)
-			console.log(lastOne)
-		}
-
-		function loadXMLDoc(theURL) {
-			if (window.XMLHttpRequest) {
-				xmlhttp = new XMLHttpRequest();
-			}
-			else {
-				xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
-			}
-			xmlhttp.onreadystatechange = function () {
-				if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-					// alert(xmlhttp.responseText);
-					console.log("External request: completed.")
-				}
-			}
-			xmlhttp.open("GET", theURL, false);
-			xmlhttp.send();
-			return xmlhttp.responseText
-		}
-
-		function openURL(url) {
-			window.open(url, "_blank").focus();
-		}
-
-		// function sleep(milliseconds) {
-		// 	const date = Date.now();
-		// 	let currentDate = null;
-		// 	do {
-		// 		currentDate = Date.now();
-		// 	} while (currentDate - date < milliseconds);
-		// }
-
-		function sleep(ms) {
-			return new Promise(resolve => setTimeout(resolve, ms));
-		}
-
-
-		async function invite() {
-			document.getElementById("invite_button").classList.add("vibrate");
-			await sleep(3500);
-			window.location.href = ("https://discord.com/oauth2/authorize?client_id=969293937091149874&scope=bot%20applications.commands&permissions=2147764224&response_type=code&redirect_uri=https%3A%2F%2Fask-bot.gq%2Fthanks")
-			document.getElementById("invite_button").classList.remove("vibrate");
-			// await setTimeout((url) => { window.open("https://discord.com/oauth2/authorize?client_id=969293937091149874&scope=bot%20applications.commands&permissions=2147764224&response_type=code&redirect_uri=https%3A%2F%2Fask-bot.gq%2Fthanks", "_blank").focus(); document.getElementById("invite_button").classList.remove("vibrate") }, 3000);
-		}
-
-
-		function truncateString(str, num) {
-			if (str.length <= num) {
-				return str
-			}
-			return str.slice(0, num) + '...'
-		}
-
-		function stringify(str) {
-			console.log(Object.prototype.toString.call(str));
-		}
-	</script>
-</body>
+		</script>
+	</body>
+</html>
