--- a/index.html
+++ b/index.html
@@ -89,6 +89,28 @@
 		</div>
 	</div>
 
+	<footer>
+		<div class="footer-grid">
+			<div class="footer-1">
+				<h3>Question related</h3>
+
+				<a href="https://ask-bot.gq/browser" target="_blank" rel="noopener noreferrer">Ask! Question Browser</a><br>
+				<a href="https://ask-bot.gq/question" target="_blank" rel="noopener noreferrer">Ask! Question Viewer</a><br>
+				<a href="https://ask-bot.gq/user" target="_blank" rel="noopener noreferrer">Ask! User Viewer</a>
+			</div>
+			<div class="footer-2">
+				<h3>Other useful links</h3>
+
+				<a href="https://ask-bot.gq/supercharges/" target="_blank" rel="noopener noreferrer" class="supercharge-gradient-link">Ask! Supercharges</a><br>
+				<a href="https://ask-bot.gq/pricacy" target="_blank" rel="noopener noreferrer">Ask! Privacy Policy</a><br>
+				<a href="https://ask-bot.gq/discord" target="_blank" rel="noopener noreferrer">Ask! Discord Server</a>
+			</div>
+			<div class="footer-3">
+				<h3>Contact</h3>
+				<p>If you want to contact the Ask! team, feel free to join the Discord server or to send a direct message to <code>dante_nl#1234</code>, the creator of Ask!</p>
+			</div>
+		</div>
+	</footer>
 	<script>
 		function load() {
 			if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
