--- a/Supercharges/index.html
+++ b/Supercharges/index.html
@@ -1,5 +1,3 @@
-<!-- TODO: Make the error, and thanks pages. Also add a screenshot -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +24,7 @@
 	<link rel="manifest" href="/Ask! Favicon/site.webmanifest">
 	<meta name="theme-color" content="#ED47FF">
 	<link rel="stylesheet" href="/style.css" />
+	<!-- <link rel="stylesheet" href="/Website/style.css" /> -->
 	<meta charset="utf-8" />
 	<script src="https://kit.fontawesome.com/ee422b4c3c.js" crossorigin="anonymous"></script>
 	<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
@@ -43,7 +42,7 @@
 			<p>
 				It's quite nice that you can ask your question, but sometimes you need answers too! Of course you can wait a bit, and let your answer drown in other questions, but you can also just <b>Supercharge</b> your question and make it noticeable!
 				<br>
-				Your question will be Supercharged to the top of the Question Browser (<b>SOON&trade;</b>) as soon as you choose to do when you ask your question, or later by doing <code>/supercharge id:&mldr;</code>. 
+				Your question will be Supercharged to the top of the <a href="https://ask-bot.gq/browser" target="_blank" rel="noopener noreferrer">Question Browser</a> as soon as you choose to do when you ask your question, or later by doing <code>/supercharge id:&mldr;</code>. 
 			</p>
 		</div>
 		<div class="right">
@@ -67,10 +66,7 @@
 				<br>
 				These features allow <i>you</i> to be Supercharged! Your role that you will receive in the Ask! Discord server will be <span style="color: #bd2d87;">#bd2d87</span> to make it clear that you bought Supercharges! Your name will also be higher in the member list!
 			</p>
-			<br>
-			<br>
-			<br>
-			<br>
+			<!-- <i>21% tax not included</i> -->
 		</div>
 
 		<div class="purchase-grid">
@@ -79,14 +75,19 @@
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_s-xclick">
 					<input type="hidden" name="hosted_button_id" value="L2NRX22SGL65N">
-					<!-- <label for="os0" type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (<a href="https://ask-bot.gq/id" target="_blank" rel="noopener noreferrer">more info</a>):</label> -->
-					<!-- <input type="text" name="os0" maxlength="200" required> -->
-					<table>
-						<tr>
-							<td><input type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (ask-bot.gq/id):</td>
+
+					<div style="display:table;">
+						<div style="display:table-cell;vertical-align:middle;">
+							<div style="margin-left:auto;margin-right:auto;"></div>
+						</div>
+					</div>
+
+					<table style="display:table;">
+						<tr style="display:table-cell;vertical-align:middle;">
+							<td style="margin-left:auto;margin-right:auto;"><input type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (<a href="https://ask-bot.gq/id" target="_blank" rel="noopener noreferrer">?</a>):</td>
 						</tr>
-						<tr>
-							<td><input type="text" name="os0" maxlength="200" required></td>
+						<tr style="display:table-cell;vertical-align:middle;">
+							<td style="margin-left:auto;margin-right:auto;"><input type="text" name="os0" maxlength="200" required></td>
 						</tr>
 					</table>
 					<button type="submit" class="buy" name="submit">
@@ -101,15 +102,15 @@
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_s-xclick">
 					<input type="hidden" name="hosted_button_id" value="9L84A44C8UXVW">
-					<!-- <label for="os0" type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (<a
-							href="https://ask-bot.gq/id" target="_blank" rel="noopener noreferrer">more info</a>):</label>
-					<input type="text" name="os0" maxlength="200" required> -->
-					<table>
-						<tr>
-							<td><input type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (ask-bot.gq/id):</td>
+
+					<table style="display:table;">
+						<tr style="display:table-cell;vertical-align:middle;">
+							<td style="margin-left:auto;margin-right:auto;"><input type="hidden" name="on0"
+									value="Discord ID (ask-bot.gq/id):">Discord ID (<a href="https://ask-bot.gq/id" target="_blank"
+									rel="noopener noreferrer">?</a>):</td>
 						</tr>
-						<tr>
-							<td><input type="text" name="os0" maxlength="200" required></td>
+						<tr style="display:table-cell;vertical-align:middle;">
+							<td style="margin-left:auto;margin-right:auto;"><input type="text" name="os0" maxlength="200" required></td>
 						</tr>
 					</table>
 					<button type="submit" class="buy" name="submit">
@@ -124,15 +125,15 @@
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_s-xclick">
 					<input type="hidden" name="hosted_button_id" value="9ME4MD4XFA3ES">
-					<!-- <label for="os0" type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (<a
-							href="https://ask-bot.gq/id" target="_blank" rel="noopener noreferrer">more info</a>):</label> -->
-					<!-- <input type="text" name="os0" maxlength="200" required> -->
-					<table>
-						<tr>
-							<td><input type="hidden" name="on0" value="Discord ID (ask-bot.gq/id):">Discord ID (ask-bot.gq/id):</td>
+
+					<table style="display:table;">
+						<tr style="display:table-cell;vertical-align:middle;">
+							<td style="margin-left:auto;margin-right:auto;"><input type="hidden" name="on0"
+									value="Discord ID (ask-bot.gq/id):">Discord ID (<a href="https://ask-bot.gq/id" target="_blank"
+									rel="noopener noreferrer">?</a>):</td>
 						</tr>
-						<tr>
-							<td><input type="text" name="os0" maxlength="200" required></td>
+						<tr style="display:table-cell;vertical-align:middle;">
+							<td style="margin-left:auto;margin-right:auto;"><input type="text" name="os0" maxlength="200" required></td>
 						</tr>
 					</table>
 					<button type="submit" class="buy" name="submit">
@@ -143,6 +144,7 @@
 			</div>
 		</div>
 	</div>
+
 	<script>
 		function load() {
 			if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
