--- a/browser.html
+++ b/browser.html
@@ -99,8 +99,8 @@
 		}
 
 		function loadCharged() {
-			// const request = JSON.parse(loadXMLDoc("https://ask.luckunstoppable7.com/data.json"))
-			const request = JSON.parse(loadXMLDoc("https://cdn.dantenl.tk/Ask%21/data.json"))
+			const request = JSON.parse(loadXMLDoc("https://ask.luckunstoppable7.com/data.json"))
+			// const request = JSON.parse(loadXMLDoc("https://cdn.dantenl.tk/Ask%21/data.json"))
 			iterationCountOne = 1
 			for (item in request["data"]) {
 				if (request["data"][item]["deleted"] == "true") {
@@ -156,8 +156,8 @@
 		}
 
 		function loadQuestions() {
-			// const request = JSON.parse(loadXMLDoc("https://ask.luckunstoppable7.com/data.json"))
-			const request = JSON.parse(loadXMLDoc("https://cdn.dantenl.tk/Ask%21/data.json"))
+			const request = JSON.parse(loadXMLDoc("https://ask.luckunstoppable7.com/data.json"))
+			// const request = JSON.parse(loadXMLDoc("https://cdn.dantenl.tk/Ask%21/data.json"))
 			itemCount = 1
 			keys = Object.keys(request["data"])
 			for (item in request["data"]) {
