--- a/Supercharges/index.html
+++ b/Supercharges/index.html
@@ -62,7 +62,7 @@
 			</div>
 			<h1>Upgrade your status.</h1>
 			<p>
-				Apart from Supercharging your question to the top, you'll also receive a nice diamond icon for every question you ask and every answer you send. And you will also receive a special role in the Discord server, all because you paid a few euros!
+				Apart from Supercharging your question to the top, you'll also receive a special role in the Discord server, all because you paid a few euros!
 				<br>
 				These features allow <i>you</i> to be Supercharged! Your role that you will receive in the Ask! Discord server will be <span style="color: #bd2d87;">#bd2d87</span> to make it clear that you bought Supercharges! Your name will also be higher in the member list!
 			</p>
