⭐️: Added Sign in with Discord

--- a/user.html
+++ b/user.html
@@ -42,6 +42,18 @@
 			<button>
 				<i class="fa-solid fa-circle-arrow-right"></i>
 			</button>
+			<div class="invite-wrapper">
+				<div class="invite" onclick="window.location.href = 'https://easyauth.quick-stats.info/ask.php'">
+					<div class="invite-main">
+						<h2>
+						<a class="smaller invite-main" style="color: white !important">
+							<i class="fa-brands fa-discord"></i>
+							Log in with Discord
+						</a>
+						</h2>
+					</div>
+				</div>
+			</div>
 		</form>
 		<div class="question">
 			<div id="warning" class="warning" style="display: none;">This will show up when there is something you need
