⏱: Added a temporary fix because I lost ask-bot.gq

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Ask!" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://ask-bot.gq/i/AskLogo200x200.png" />
+	<meta property="og:image" content="https://ask.dantenl.tk/i/AskLogo200x200.png" />
 	<meta property="og:description"
 		content="Ask! is a Discord bot that allows you to ask questions from any server (or DMs) and can be answered via the Discord server!" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/Ask! Favicon/apple-touch-icon.png">
@@ -94,16 +94,16 @@
 			<div class="footer-1">
 				<h3>Question related</h3>
 
-				<a href="https://ask-bot.gq/browser" target="_blank" rel="noopener noreferrer">Ask! Question Browser</a><br>
-				<a href="https://ask-bot.gq/question" target="_blank" rel="noopener noreferrer">Ask! Question Viewer</a><br>
-				<a href="https://ask-bot.gq/user" target="_blank" rel="noopener noreferrer">Ask! User Viewer</a>
+				<a href="https://ask.dantenl.tk/browser" target="_blank" rel="noopener noreferrer">Ask! Question Browser</a><br>
+				<a href="https://ask.dantenl.tk/question" target="_blank" rel="noopener noreferrer">Ask! Question Viewer</a><br>
+				<a href="https://ask.dantenl.tk/user" target="_blank" rel="noopener noreferrer">Ask! User Viewer</a>
 			</div>
 			<div class="footer-2">
 				<h3>Other useful links</h3>
 
-				<a href="https://ask-bot.gq/supercharges/" target="_blank" rel="noopener noreferrer" class="supercharge-gradient-link">Ask! Supercharges</a><br>
-				<a href="https://ask-bot.gq/pricacy" target="_blank" rel="noopener noreferrer">Ask! Privacy Policy</a><br>
-				<a href="https://ask-bot.gq/discord" target="_blank" rel="noopener noreferrer">Ask! Discord Server</a>
+				<a href="https://ask.dantenl.tk/supercharges/" target="_blank" rel="noopener noreferrer" class="supercharge-gradient-link">Ask! Supercharges</a><br>
+				<a href="https://ask.dantenl.tk/pricacy" target="_blank" rel="noopener noreferrer">Ask! Privacy Policy</a><br>
+				<a href="https://ask.dantenl.tk/discord" target="_blank" rel="noopener noreferrer">Ask! Discord Server</a>
 			</div>
 			<div class="footer-3">
 				<h3>Contact</h3>
@@ -195,9 +195,9 @@
 		async function invite() {
 			document.getElementById("invite_button").classList.add("vibrate");
 			await sleep(3500);
-			window.location.href = ("https://discord.com/oauth2/authorize?client_id=969293937091149874&scope=bot%20applications.commands&permissions=2147764224&response_type=code&redirect_uri=https%3A%2F%2Fask-bot.gq%2Fthanks")
+			window.location.href = ("https://discord.com/oauth2/authorize?client_id=969293937091149874&scope=bot%20applications.commands&permissions=2147764224&response_type=code&redirect_uri=https%3A%2F%2Fask.dantenl.tk%2Fthanks")
 			document.getElementById("invite_button").classList.remove("vibrate");
-			// await setTimeout((url) => { window.open("https://discord.com/oauth2/authorize?client_id=969293937091149874&scope=bot%20applications.commands&permissions=2147764224&response_type=code&redirect_uri=https%3A%2F%2Fask-bot.gq%2Fthanks", "_blank").focus(); document.getElementById("invite_button").classList.remove("vibrate") }, 3000);
+			// await setTimeout((url) => { window.open("https://discord.com/oauth2/authorize?client_id=969293937091149874&scope=bot%20applications.commands&permissions=2147764224&response_type=code&redirect_uri=https%3A%2F%2Fask.dantenl.tk%2Fthanks", "_blank").focus(); document.getElementById("invite_button").classList.remove("vibrate") }, 3000);
 		}
 
 
