--- a/tos.html
+++ b/tos.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	<div class="main">
-		<h1>Website Terms and Conditions of Use</h1>
+		<h1>Ask! Terms and Conditions of Use</h1>
 
 		<h2>1. Terms</h2>
 
