--- a/thanks.html
+++ b/thanks.html
@@ -23,7 +23,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/Ask! Favicon/favicon-16x16.png">
 	<link rel="manifest" href="/Ask! Favicon/site.webmanifest">
 	<meta name="theme-color" content="#ED47FF">
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="/style.css" />
 	<script src="https://kit.fontawesome.com/ee422b4c3c.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -57,7 +57,7 @@
 		} else {
 			document.getElementById("title").innerText = "Thanks for inviting Ask!"
 			document.getElementById("subtitle").innerText = "If you want to, you can also join the official Ask! Discord server."
-			document.getElementById("button-text").innerHTML = `<i class="fa-brands fa-discord">Join the Discord server`
+			document.getElementById("button-text").innerHTML = `<i class="fa-brands fa-discord"></i>Join the Discord server`
 			document.getElementById("idkwhattocall").onclick = "location.href='discord'"
 			document.getElementById("button-text").href = "discord.html"
 			document.getElementsByClassName("invite")[0].style.backgroundColor = "#5AA364"
