--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 		async function invite() {
 			document.getElementById("invite_button").classList.add("vibrate");
 			await sleep(3500);
-			window.location.href = ("https://discord.com/oauth2/authorize?client_id=969293937091149874&scope=bot%20applications.commands&permissions=2147764224&response_type=code&redirect_uri=https%3A%2F%2Fask.dantenl.tk%2Fthanks")
+			window.location.href = ("https://discord.com/oauth2/authorize?client_id=969293937091149874&scope=bot%20applications.commands&permissions=2147764224&response_type=code&redirect_uri=https%3A%2F%2Fask-bot.gq%2Fthanks")
 			document.getElementById("invite_button").classList.remove("vibrate");
 			// await setTimeout((url) => { window.open("https://discord.com/oauth2/authorize?client_id=969293937091149874&scope=bot%20applications.commands&permissions=2147764224&response_type=code&redirect_uri=https%3A%2F%2Fask.dantenl.tk%2Fthanks", "_blank").focus(); document.getElementById("invite_button").classList.remove("vibrate") }, 3000);
 		}
