--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Ask!" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://ask.dantenl.tk/i/AskLogo200x200.png" />
+	<meta property="og:image" content="https://ask.dantenl.com/i/AskLogo200x200.png" />
 	<meta property="og:description"
 		content="Ask! is a Discord bot that allows you to ask questions from any server (or DMs) and can be answered via the Discord server!" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/Ask! Favicon/apple-touch-icon.png">
@@ -94,16 +94,16 @@
 			<div class="footer-1">
 				<h3>Question related</h3>
 
-				<a href="https://ask.dantenl.tk/browser" target="_blank" rel="noopener noreferrer">Ask! Question Browser</a><br>
-				<a href="https://ask.dantenl.tk/question" target="_blank" rel="noopener noreferrer">Ask! Question Viewer</a><br>
-				<a href="https://ask.dantenl.tk/user" target="_blank" rel="noopener noreferrer">Ask! User Viewer</a>
+				<a href="https://ask.dantenl.com/browser" target="_blank" rel="noopener noreferrer">Ask! Question Browser</a><br>
+				<a href="https://ask.dantenl.com/question" target="_blank" rel="noopener noreferrer">Ask! Question Viewer</a><br>
+				<a href="https://ask.dantenl.com/user" target="_blank" rel="noopener noreferrer">Ask! User Viewer</a>
 			</div>
 			<div class="footer-2">
 				<h3>Other useful links</h3>
 
-				<a href="https://ask.dantenl.tk/supercharges/" target="_blank" rel="noopener noreferrer" class="supercharge-gradient-link">Ask! Supercharges</a><br>
-				<a href="https://ask.dantenl.tk/pricacy" target="_blank" rel="noopener noreferrer">Ask! Privacy Policy</a><br>
-				<a href="https://ask.dantenl.tk/discord" target="_blank" rel="noopener noreferrer">Ask! Discord Server</a>
+				<!-- <a href="https://ask.dantenl.com/supercharges/" target="_blank" rel="noopener noreferrer" class="supercharge-gradient-link">Ask! Supercharges</a><br> -->
+				<a href="https://ask.dantenl.com/pricacy" target="_blank" rel="noopener noreferrer">Ask! Privacy Policy</a><br>
+				<a href="https://ask.dantenl.com/discord" target="_blank" rel="noopener noreferrer">Ask! Discord Server</a>
 			</div>
 			<div class="footer-3">
 				<h3>Contact</h3>
