--- a/my2022.html
+++ b/my2022.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Ask!" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://ask.dantenl.tk/i/AskLogo200x200.png" />
+	<meta property="og:image" content="https://ask.dantenl.com/i/AskLogo200x200.png" />
 	<meta property="og:description"
 		content="Ask! is a Discord bot that allows you to ask questions from any server (or DMs) and can be answered via the Discord server!" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/Ask! Favicon/apple-touch-icon.png">
