--- a/privacy.html
+++ b/privacy.html
@@ -39,7 +39,7 @@
 		<p>Ask! automatically stores data when you interact with the bot. Below is listed what data we collect, and what we use
 			it for. <strong>When you use the Ask! Discord bot, you automatically agree to this.</strong>
 			Ask! saves information about you for moderation purposes and because the Ask! bot uses this data to make it work in
-			the first place. All this data is publicly available, you can use the <a href="https://ask-bot.gq/question">Ask!
+			the first place. All this data is publicly available, you can use the <a href="https://ask.dantenl.com/question">Ask!
 				Question Viewer</a> or directly read the data dictionary in <a
 				href="https://ask.luckunstoppable7.com/data.json">the <code>data.json</code> file</a>.</p>
 		<h3 id="question-data">Question data</h3>
@@ -88,7 +88,7 @@
 			<li>
 				<p>The author name and tag</p>
 				<p> Every Discord account, including bots, has a unique name and tag. This tag is used by the <a
-						href="https://ask-bot.gq/question">Ask! Question Viewer</a> to make it a lot more readable than, for
+						href="https://ask.dantenl.com/question">Ask! Question Viewer</a> to make it a lot more readable than, for
 					example:</p>
 				<blockquote>
 					<p>Asked by 969293937091149874</p>
